change form selector to radio buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,19 @@
-#answers, #java {
+#java {
   display: none;
 }
 
-#answers, #csharp {
+#csharp {
   display: none;
 }
 
-#answers, #design {
+#design {
   display: none;
 }
 
-#answers, #php {
+#php {
   display: none;
 }
 
-#answers, #ruby {
+#ruby {
   display: none;
 }
