--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,20 @@
-.java {
+#java {
   display: none;
 }
 
-.csharp {
+#csharp {
   display: none;
 }
 
-.design {
+#design {
   display: none;
 }
 
-.php {
+#php {
   display: none;
 }
 
-.ruby {
+#ruby {
   display: none;
 }
 
